force-app/main/default/objects/Location__c/fields/CREATEDDATE__c.field-meta.xml
<CustomField>
    <fullName>CREATEDDATE__c</fullName>
    <label>Created Date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>