force-app/main/default/objects/Location__c/fields/ISDELETED__c.field-meta.xml
<CustomField>
    <fullName>ISDELETED__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IS Deleted</label>
    <type>Checkbox</type>
</CustomField>