force-app/main/default/objects/Location__c/fields/LASTMODIFIEDBYID__c.field-meta.xml
<CustomField>
    <fullName>LASTMODIFIEDBYID__c</fullName>
    <label>Last Modified By ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>