force-app/main/default/objects/Location__c/fields/LASTREFERENCEDDATE__c.field-meta.xml
<CustomField>
    <fullName>LASTREFERENCEDDATE__c</fullName>
    <label>Last Reference Date</label>
    <type>DateTime</type>
</CustomField>