force-app/main/default/objects/Location__c/fields/LASTVIEWEDDATE__c.field-meta.xml
<CustomField>
    <fullName>LASTVIEWEDDATE__c</fullName>
    <label>Last Viewed Date</label>
    <type>DateTime</type>
</CustomField>