force-app/main/default/objects/Location__c/fields/OCE_CONTACTEMAIL_C__c.field-meta.xml
<CustomField>
    <fullName>OCE_CONTACTEMAIL_C__c</fullName>
    <label>Contact Email</label>
    <type>Email</type>
</CustomField>