force-app/main/default/objects/Location__c/fields/OCE_CONTACTPHONE_C__c.field-meta.xml
<CustomField>
    <fullName>OCE_CONTACTPHONE_C__c</fullName>
    <label>Contact Phone</label>
    <type>Phone</type>
</CustomField>