force-app/main/default/objects/Location__c/fields/OCE_ENDDATE_C__c.field-meta.xml
<CustomField>
    <fullName>OCE_ENDDATE_C__c</fullName>
    <label>End Date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>