force-app/main/default/objects/Location__c/fields/OCE_GEOLOCATION_LATITUDE_S__c.field-meta.xml
<CustomField>
    <fullName>OCE_GEOLOCATION_LATITUDE_S__c</fullName>
    <label>Geolocation Latitude</label>
    <scale>6</scale>
    <type>Location</type>
</CustomField>