force-app/main/default/objects/Location__c/fields/OCE_GEOLOCATION_LONGITUDE_S__c.field-meta.xml
<CustomField>
    <fullName>OCE_GEOLOCATION_LONGITUDE_S__c</fullName>
    <label>Geolocation Longitude</label>
    <scale>6</scale>
    <type>Location</type>
</CustomField>