force-app/main/default/objects/Location__c/fields/OCE_MAINCONTACTNAME_C__c.field-meta.xml
<CustomField>
    <fullName>OCE_MAINCONTACTNAME_C__c</fullName>
    <label>Main Contact Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>