force-app/main/default/objects/Location__c/fields/OCE_NOOFPRIVATEROOMS_C__c.field-meta.xml
<CustomField>
    <fullName>OCE_NOOFPRIVATEROOMS_C__c</fullName>
    <label>No Of Private Rooms</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>