force-app/main/default/objects/Location__c/fields/OCE_NOTES_C__c.field-meta.xml
<CustomField>
    <fullName>OCE_NOTES_C__c</fullName>
    <label>Notes</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>