force-app/main/default/objects/Location__c/fields/OCE_OFFLINECREATEDDATE_C__c.field-meta.xml
<CustomField>
    <fullName>OCE_OFFLINECREATEDDATE_C__c</fullName>
    <label>Offline Created Date</label>
    <type>DateTime</type>
</CustomField>