force-app/main/default/objects/Location__c/fields/OCE_OFFLINELASTMODIFIEDBYID_C__c.field-meta.xml
<CustomField>
    <fullName>OCE_OFFLINELASTMODIFIEDBYID_C__c</fullName>
    <label>Offline Last Modified By ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>