force-app/main/default/objects/Location__c/fields/OCE_OFFLINELASTMODIFIEDDATE_C__c.field-meta.xml
<CustomField>
    <fullName>OCE_OFFLINELASTMODIFIEDDATE_C__c</fullName>
    <label>Offline Last Modified Date</label>
    <type>DateTime</type>
</CustomField>