force-app/main/default/objects/Location__c/fields/OCE_PARKING_C__c.field-meta.xml
<CustomField>
    <fullName>OCE_PARKING_C__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Parking</label>
    <type>Checkbox</type>
</CustomField>