force-app/main/default/objects/Location__c/fields/OCE_SEATINGCAPACITY_C__c.field-meta.xml
<CustomField>
    <fullName>OCE_SEATINGCAPACITY_C__c</fullName>
    <label>Seating Capacity</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>