force-app/main/default/objects/Location__c/fields/OCE_SEATINGOPTIONS_C__c.field-meta.xml
<CustomField>
    <fullName>OCE_SEATINGOPTIONS_C__c</fullName>
    <label>Seating Options</label>
    <length>255</length>
    <type>Text</type>
</CustomField>