force-app/main/default/objects/Location__c/fields/OCE_STARRATING_C__c.field-meta.xml
<CustomField>
    <fullName>OCE_STARRATING_C__c</fullName>
    <label>Star Rating</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>