force-app/main/default/objects/Location__c/fields/OCE_STARTDATE_C__c.field-meta.xml
<CustomField>
    <fullName>OCE_STARTDATE_C__c</fullName>
    <label>Start Date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>