force-app/main/default/objects/Location__c/fields/OCE_SUBTYPE_C__c.field-meta.xml
<CustomField>
    <fullName>OCE_SUBTYPE_C__c</fullName>
    <label>Sub-type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>