force-app/main/default/objects/Location__c/fields/OCE_TYPE_C__c.field-meta.xml
<CustomField>
    <fullName>OCE_TYPE_C__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Venue</fullName>
            </value>
            <value>
                <fullName>Caterer</fullName>
            </value>
            <value>
                <fullName>Venue &amp; Caterer</fullName>
            </value>
            <value>
                <fullName>A/V Provider</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>