force-app/main/default/objects/Location__c/fields/OCE_WEBPAGE_C__c.field-meta.xml
<CustomField>
    <fullName>OCE_WEBPAGE_C__c</fullName>
    <label>Web page</label>
    <type>Email</type>
</CustomField>