force-app/main/default/objects/Location__c/fields/SYSTEMMODSTAMP__c.field-meta.xml
<CustomField>
    <fullName>SYSTEMMODSTAMP__c</fullName>
    <label>System Mod Stamp</label>
    <length>255</length>
    <type>Text</type>
</CustomField>