force-app/main/default/objects/Location__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATEDBYID__c</columns>
    <columns>CREATEDDATE__c</columns>
    <columns>CURRENCYISOCODE__c</columns>
    <columns>ID__c</columns>
    <columns>ISDELETED__c</columns>
    <columns>LASTMODIFIEDBYID__c</columns>
    <columns>LASTMODIFIEDDATE__c</columns>
    <columns>LASTREFERENCEDDATE__c</columns>
    <columns>LASTVIEWEDDATE__c</columns>
    <columns>NAME__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>